outputs da aula

--- a/aulas/of4/ocr.ipynb
+++ b/aulas/of4/ocr.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,9 +290,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arquivo assets/lima_barreto_dominio_publico.pdf convertido com sucesso.\n"
+     ]
+    }
+   ],
    "source": [
     "# chama a função pdf2img para converter o PDF em imagens\n",
     "pdf2img(pdf_path, img_path)\n"
@@ -300,9 +308,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Texto extraído da imagem 69.tiff\n",
+      "Texto salvo em assets/images_limabarreto/69.tiff.txt\n",
+      "Texto extraído da imagem 4.tiff\n",
+      "Texto salvo em assets/images_limabarreto/4.tiff.txt\n",
+      "Texto extraído da imagem 55.tiff\n",
+      "Texto salvo em assets/images_limabarreto/55.tiff.txt\n",
+      "Texto extraído da imagem 44.tiff\n",
+      "Texto salvo em assets/images_limabarreto/44.tiff.txt\n",
+      "Texto extraído da imagem 81.tiff\n",
+      "Texto salvo em assets/images_limabarreto/81.tiff.txt\n",
+      "Texto extraído da imagem 84.tiff\n",
+      "Texto salvo em assets/images_limabarreto/84.tiff.txt\n",
+      "Texto extraído da imagem 26.tiff\n",
+      "Texto salvo em assets/images_limabarreto/26.tiff.txt\n",
+      "Texto extraído da imagem 92.tiff\n",
+      "Texto salvo em assets/images_limabarreto/92.tiff.txt\n",
+      "Texto extraído da imagem 30.tiff\n",
+      "Texto salvo em assets/images_limabarreto/30.tiff.txt\n",
+      "Texto extraído da imagem 5.tiff\n",
+      "Texto salvo em assets/images_limabarreto/5.tiff.txt\n",
+      "Texto extraído da imagem 95.tiff\n",
+      "Texto salvo em assets/images_limabarreto/95.tiff.txt\n",
+      "Texto extraído da imagem 85.tiff\n",
+      "Texto salvo em assets/images_limabarreto/85.tiff.txt\n",
+      "Texto extraído da imagem 38.tiff\n",
+      "Texto salvo em assets/images_limabarreto/38.tiff.txt\n",
+      "Texto extraído da imagem 72.tiff\n",
+      "Texto salvo em assets/images_limabarreto/72.tiff.txt\n",
+      "Texto extraído da imagem 58.tiff\n",
+      "Texto salvo em assets/images_limabarreto/58.tiff.txt\n",
+      "Texto extraído da imagem 0.tiff\n",
+      "Texto salvo em assets/images_limabarreto/0.tiff.txt\n",
+      "Texto extraído da imagem 31.tiff\n",
+      "Texto salvo em assets/images_limabarreto/31.tiff.txt\n",
+      "Texto extraído da imagem 96.tiff\n",
+      "Texto salvo em assets/images_limabarreto/96.tiff.txt\n",
+      "Texto extraído da imagem 40.tiff\n",
+      "Texto salvo em assets/images_limabarreto/40.tiff.txt\n",
+      "Texto extraído da imagem 79.tiff\n",
+      "Texto salvo em assets/images_limabarreto/79.tiff.txt\n",
+      "Texto extraído da imagem 64.tiff\n",
+      "Texto salvo em assets/images_limabarreto/64.tiff.txt\n",
+      "Texto extraído da imagem 39.tiff\n",
+      "Texto salvo em assets/images_limabarreto/39.tiff.txt\n",
+      "Texto extraído da imagem 62.tiff\n",
+      "Texto salvo em assets/images_limabarreto/62.tiff.txt\n",
+      "Texto extraído da imagem 3.tiff\n",
+      "Texto salvo em assets/images_limabarreto/3.tiff.txt\n",
+      "Texto extraído da imagem 20.tiff\n",
+      "Texto salvo em assets/images_limabarreto/20.tiff.txt\n",
+      "Texto extraído da imagem 49.tiff\n",
+      "Texto salvo em assets/images_limabarreto/49.tiff.txt\n",
+      "Texto extraído da imagem 46.tiff\n",
+      "Texto salvo em assets/images_limabarreto/46.tiff.txt\n",
+      "Texto extraído da imagem 61.tiff\n",
+      "Texto salvo em assets/images_limabarreto/61.tiff.txt\n",
+      "Texto extraído da imagem 27.tiff\n",
+      "Texto salvo em assets/images_limabarreto/27.tiff.txt\n",
+      "Texto extraído da imagem 14.tiff\n",
+      "Texto salvo em assets/images_limabarreto/14.tiff.txt\n",
+      "Texto extraído da imagem 45.tiff\n",
+      "Texto salvo em assets/images_limabarreto/45.tiff.txt\n",
+      "Texto extraído da imagem 47.tiff\n",
+      "Texto salvo em assets/images_limabarreto/47.tiff.txt\n",
+      "Texto extraído da imagem 78.tiff\n",
+      "Texto salvo em assets/images_limabarreto/78.tiff.txt\n",
+      "Texto extraído da imagem 13.tiff\n",
+      "Texto salvo em assets/images_limabarreto/13.tiff.txt\n",
+      "Texto extraído da imagem 54.tiff\n",
+      "Texto salvo em assets/images_limabarreto/54.tiff.txt\n",
+      "Texto extraído da imagem 22.tiff\n",
+      "Texto salvo em assets/images_limabarreto/22.tiff.txt\n",
+      "Texto extraído da imagem 16.tiff\n",
+      "Texto salvo em assets/images_limabarreto/16.tiff.txt\n",
+      "Texto extraído da imagem 87.tiff\n",
+      "Texto salvo em assets/images_limabarreto/87.tiff.txt\n",
+      "Texto extraído da imagem 86.tiff\n",
+      "Texto salvo em assets/images_limabarreto/86.tiff.txt\n",
+      "Texto extraído da imagem 41.tiff\n",
+      "Texto salvo em assets/images_limabarreto/41.tiff.txt\n",
+      "Texto extraído da imagem 50.tiff\n",
+      "Texto salvo em assets/images_limabarreto/50.tiff.txt\n",
+      "Texto extraído da imagem 66.tiff\n",
+      "Texto salvo em assets/images_limabarreto/66.tiff.txt\n",
+      "Texto extraído da imagem 51.tiff\n",
+      "Texto salvo em assets/images_limabarreto/51.tiff.txt\n",
+      "Texto extraído da imagem 9.tiff\n",
+      "Texto salvo em assets/images_limabarreto/9.tiff.txt\n",
+      "Texto extraído da imagem 60.tiff\n",
+      "Texto salvo em assets/images_limabarreto/60.tiff.txt\n",
+      "Texto extraído da imagem 15.tiff\n",
+      "Texto salvo em assets/images_limabarreto/15.tiff.txt\n",
+      "Texto extraído da imagem 80.tiff\n",
+      "Texto salvo em assets/images_limabarreto/80.tiff.txt\n",
+      "Texto extraído da imagem 57.tiff\n",
+      "Texto salvo em assets/images_limabarreto/57.tiff.txt\n",
+      "Texto extraído da imagem 19.tiff\n",
+      "Texto salvo em assets/images_limabarreto/19.tiff.txt\n",
+      "Texto extraído da imagem 56.tiff\n",
+      "Texto salvo em assets/images_limabarreto/56.tiff.txt\n",
+      "Texto extraído da imagem 91.tiff\n",
+      "Texto salvo em assets/images_limabarreto/91.tiff.txt\n",
+      "Texto extraído da imagem 77.tiff\n",
+      "Texto salvo em assets/images_limabarreto/77.tiff.txt\n",
+      "Texto extraído da imagem 83.tiff\n",
+      "Texto salvo em assets/images_limabarreto/83.tiff.txt\n",
+      "Texto extraído da imagem 25.tiff\n",
+      "Texto salvo em assets/images_limabarreto/25.tiff.txt\n",
+      "Texto extraído da imagem 23.tiff\n",
+      "Texto salvo em assets/images_limabarreto/23.tiff.txt\n",
+      "Texto extraído da imagem 18.tiff\n",
+      "Texto salvo em assets/images_limabarreto/18.tiff.txt\n",
+      "Texto extraído da imagem 68.tiff\n",
+      "Texto salvo em assets/images_limabarreto/68.tiff.txt\n",
+      "Texto extraído da imagem 35.tiff\n",
+      "Texto salvo em assets/images_limabarreto/35.tiff.txt\n",
+      "Texto extraído da imagem 63.tiff\n",
+      "Texto salvo em assets/images_limabarreto/63.tiff.txt\n",
+      "Texto extraído da imagem 2.tiff\n",
+      "Texto salvo em assets/images_limabarreto/2.tiff.txt\n",
+      "Texto extraído da imagem 67.tiff\n",
+      "Texto salvo em assets/images_limabarreto/67.tiff.txt\n",
+      "Texto extraído da imagem 28.tiff\n",
+      "Texto salvo em assets/images_limabarreto/28.tiff.txt\n",
+      "Texto extraído da imagem 1.tiff\n",
+      "Texto salvo em assets/images_limabarreto/1.tiff.txt\n",
+      "Texto extraído da imagem 10.tiff\n",
+      "Texto salvo em assets/images_limabarreto/10.tiff.txt\n",
+      "Texto extraído da imagem 98.tiff\n",
+      "Texto salvo em assets/images_limabarreto/98.tiff.txt\n",
+      "Texto extraído da imagem 76.tiff\n",
+      "Texto salvo em assets/images_limabarreto/76.tiff.txt\n",
+      "Texto extraído da imagem 97.tiff\n",
+      "Texto salvo em assets/images_limabarreto/97.tiff.txt\n",
+      "Texto extraído da imagem 100.tiff\n",
+      "Texto salvo em assets/images_limabarreto/100.tiff.txt\n",
+      "Texto extraído da imagem 93.tiff\n",
+      "Texto salvo em assets/images_limabarreto/93.tiff.txt\n",
+      "Texto extraído da imagem 42.tiff\n",
+      "Texto salvo em assets/images_limabarreto/42.tiff.txt\n",
+      "Texto extraído da imagem 17.tiff\n",
+      "Texto salvo em assets/images_limabarreto/17.tiff.txt\n",
+      "Texto extraído da imagem 59.tiff\n",
+      "Texto salvo em assets/images_limabarreto/59.tiff.txt\n",
+      "Texto extraído da imagem 12.tiff\n",
+      "Texto salvo em assets/images_limabarreto/12.tiff.txt\n",
+      "Texto extraído da imagem 94.tiff\n",
+      "Texto salvo em assets/images_limabarreto/94.tiff.txt\n",
+      "Texto extraído da imagem 43.tiff\n",
+      "Texto salvo em assets/images_limabarreto/43.tiff.txt\n",
+      "Texto extraído da imagem 24.tiff\n",
+      "Texto salvo em assets/images_limabarreto/24.tiff.txt\n",
+      "Texto extraído da imagem 71.tiff\n",
+      "Texto salvo em assets/images_limabarreto/71.tiff.txt\n",
+      "Texto extraído da imagem 6.tiff\n",
+      "Texto salvo em assets/images_limabarreto/6.tiff.txt\n",
+      "Texto extraído da imagem 48.tiff\n",
+      "Texto salvo em assets/images_limabarreto/48.tiff.txt\n",
+      "Texto extraído da imagem 82.tiff\n",
+      "Texto salvo em assets/images_limabarreto/82.tiff.txt\n",
+      "Texto extraído da imagem 52.tiff\n",
+      "Texto salvo em assets/images_limabarreto/52.tiff.txt\n",
+      "Texto extraído da imagem 70.tiff\n",
+      "Texto salvo em assets/images_limabarreto/70.tiff.txt\n",
+      "Texto extraído da imagem 37.tiff\n",
+      "Texto salvo em assets/images_limabarreto/37.tiff.txt\n",
+      "Texto extraído da imagem 7.tiff\n",
+      "Texto salvo em assets/images_limabarreto/7.tiff.txt\n",
+      "Texto extraído da imagem 99.tiff\n",
+      "Texto salvo em assets/images_limabarreto/99.tiff.txt\n",
+      "Texto extraído da imagem 90.tiff\n",
+      "Texto salvo em assets/images_limabarreto/90.tiff.txt\n",
+      "Texto extraído da imagem 33.tiff\n",
+      "Texto salvo em assets/images_limabarreto/33.tiff.txt\n",
+      "Texto extraído da imagem 11.tiff\n",
+      "Texto salvo em assets/images_limabarreto/11.tiff.txt\n",
+      "Texto extraído da imagem 74.tiff\n",
+      "Texto salvo em assets/images_limabarreto/74.tiff.txt\n",
+      "Texto extraído da imagem 102.tiff\n",
+      "Texto salvo em assets/images_limabarreto/102.tiff.txt\n",
+      "Texto extraído da imagem 89.tiff\n",
+      "Texto salvo em assets/images_limabarreto/89.tiff.txt\n",
+      "Texto extraído da imagem 36.tiff\n",
+      "Texto salvo em assets/images_limabarreto/36.tiff.txt\n",
+      "Texto extraído da imagem 101.tiff\n",
+      "Texto salvo em assets/images_limabarreto/101.tiff.txt\n",
+      "Texto extraído da imagem 73.tiff\n",
+      "Texto salvo em assets/images_limabarreto/73.tiff.txt\n",
+      "Texto extraído da imagem 8.tiff\n",
+      "Texto salvo em assets/images_limabarreto/8.tiff.txt\n",
+      "Texto extraído da imagem 103.tiff\n",
+      "Texto salvo em assets/images_limabarreto/103.tiff.txt\n",
+      "Texto extraído da imagem 75.tiff\n",
+      "Texto salvo em assets/images_limabarreto/75.tiff.txt\n",
+      "Texto extraído da imagem 21.tiff\n",
+      "Texto salvo em assets/images_limabarreto/21.tiff.txt\n",
+      "Texto extraído da imagem 34.tiff\n",
+      "Texto salvo em assets/images_limabarreto/34.tiff.txt\n",
+      "Texto extraído da imagem 32.tiff\n",
+      "Texto salvo em assets/images_limabarreto/32.tiff.txt\n",
+      "Texto extraído da imagem 65.tiff\n",
+      "Texto salvo em assets/images_limabarreto/65.tiff.txt\n",
+      "Texto extraído da imagem 53.tiff\n",
+      "Texto salvo em assets/images_limabarreto/53.tiff.txt\n",
+      "Texto extraído da imagem 29.tiff\n",
+      "Texto salvo em assets/images_limabarreto/29.tiff.txt\n",
+      "Texto extraído da imagem 88.tiff\n",
+      "Texto salvo em assets/images_limabarreto/88.tiff.txt\n"
+     ]
+    }
+   ],
    "source": [
     "# chama a função ocr para aplicar o OCR nas imagens\n",
     "ocr(img_path, lang)"
@@ -310,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,9 +565,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unindo assets/images_limabarreto/0.tiff.txt\n",
+      "Unindo assets/images_limabarreto/1.tiff.txt\n",
+      "Unindo assets/images_limabarreto/2.tiff.txt\n",
+      "Unindo assets/images_limabarreto/3.tiff.txt\n",
+      "Unindo assets/images_limabarreto/4.tiff.txt\n",
+      "Unindo assets/images_limabarreto/5.tiff.txt\n",
+      "Unindo assets/images_limabarreto/6.tiff.txt\n",
+      "Unindo assets/images_limabarreto/7.tiff.txt\n",
+      "Unindo assets/images_limabarreto/8.tiff.txt\n",
+      "Unindo assets/images_limabarreto/9.tiff.txt\n",
+      "Unindo assets/images_limabarreto/10.tiff.txt\n",
+      "Unindo assets/images_limabarreto/11.tiff.txt\n",
+      "Unindo assets/images_limabarreto/12.tiff.txt\n",
+      "Unindo assets/images_limabarreto/13.tiff.txt\n",
+      "Unindo assets/images_limabarreto/14.tiff.txt\n",
+      "Unindo assets/images_limabarreto/15.tiff.txt\n",
+      "Unindo assets/images_limabarreto/16.tiff.txt\n",
+      "Unindo assets/images_limabarreto/17.tiff.txt\n",
+      "Unindo assets/images_limabarreto/18.tiff.txt\n",
+      "Unindo assets/images_limabarreto/19.tiff.txt\n",
+      "Unindo assets/images_limabarreto/20.tiff.txt\n",
+      "Unindo assets/images_limabarreto/21.tiff.txt\n",
+      "Unindo assets/images_limabarreto/22.tiff.txt\n",
+      "Unindo assets/images_limabarreto/23.tiff.txt\n",
+      "Unindo assets/images_limabarreto/24.tiff.txt\n",
+      "Unindo assets/images_limabarreto/25.tiff.txt\n",
+      "Unindo assets/images_limabarreto/26.tiff.txt\n",
+      "Unindo assets/images_limabarreto/27.tiff.txt\n",
+      "Unindo assets/images_limabarreto/28.tiff.txt\n",
+      "Unindo assets/images_limabarreto/29.tiff.txt\n",
+      "Unindo assets/images_limabarreto/30.tiff.txt\n",
+      "Unindo assets/images_limabarreto/31.tiff.txt\n",
+      "Unindo assets/images_limabarreto/32.tiff.txt\n",
+      "Unindo assets/images_limabarreto/33.tiff.txt\n",
+      "Unindo assets/images_limabarreto/34.tiff.txt\n",
+      "Unindo assets/images_limabarreto/35.tiff.txt\n",
+      "Unindo assets/images_limabarreto/36.tiff.txt\n",
+      "Unindo assets/images_limabarreto/37.tiff.txt\n",
+      "Unindo assets/images_limabarreto/38.tiff.txt\n",
+      "Unindo assets/images_limabarreto/39.tiff.txt\n",
+      "Unindo assets/images_limabarreto/40.tiff.txt\n",
+      "Unindo assets/images_limabarreto/41.tiff.txt\n",
+      "Unindo assets/images_limabarreto/42.tiff.txt\n",
+      "Unindo assets/images_limabarreto/43.tiff.txt\n",
+      "Unindo assets/images_limabarreto/44.tiff.txt\n",
+      "Unindo assets/images_limabarreto/45.tiff.txt\n",
+      "Unindo assets/images_limabarreto/46.tiff.txt\n",
+      "Unindo assets/images_limabarreto/47.tiff.txt\n",
+      "Unindo assets/images_limabarreto/48.tiff.txt\n",
+      "Unindo assets/images_limabarreto/49.tiff.txt\n",
+      "Unindo assets/images_limabarreto/50.tiff.txt\n",
+      "Unindo assets/images_limabarreto/51.tiff.txt\n",
+      "Unindo assets/images_limabarreto/52.tiff.txt\n",
+      "Unindo assets/images_limabarreto/53.tiff.txt\n",
+      "Unindo assets/images_limabarreto/54.tiff.txt\n",
+      "Unindo assets/images_limabarreto/55.tiff.txt\n",
+      "Unindo assets/images_limabarreto/56.tiff.txt\n",
+      "Unindo assets/images_limabarreto/57.tiff.txt\n",
+      "Unindo assets/images_limabarreto/58.tiff.txt\n",
+      "Unindo assets/images_limabarreto/59.tiff.txt\n",
+      "Unindo assets/images_limabarreto/60.tiff.txt\n",
+      "Unindo assets/images_limabarreto/61.tiff.txt\n",
+      "Unindo assets/images_limabarreto/62.tiff.txt\n",
+      "Unindo assets/images_limabarreto/63.tiff.txt\n",
+      "Unindo assets/images_limabarreto/64.tiff.txt\n",
+      "Unindo assets/images_limabarreto/65.tiff.txt\n",
+      "Unindo assets/images_limabarreto/66.tiff.txt\n",
+      "Unindo assets/images_limabarreto/67.tiff.txt\n",
+      "Unindo assets/images_limabarreto/68.tiff.txt\n",
+      "Unindo assets/images_limabarreto/69.tiff.txt\n",
+      "Unindo assets/images_limabarreto/70.tiff.txt\n",
+      "Unindo assets/images_limabarreto/71.tiff.txt\n",
+      "Unindo assets/images_limabarreto/72.tiff.txt\n",
+      "Unindo assets/images_limabarreto/73.tiff.txt\n",
+      "Unindo assets/images_limabarreto/74.tiff.txt\n",
+      "Unindo assets/images_limabarreto/75.tiff.txt\n",
+      "Unindo assets/images_limabarreto/76.tiff.txt\n",
+      "Unindo assets/images_limabarreto/77.tiff.txt\n",
+      "Unindo assets/images_limabarreto/78.tiff.txt\n",
+      "Unindo assets/images_limabarreto/79.tiff.txt\n",
+      "Unindo assets/images_limabarreto/80.tiff.txt\n",
+      "Unindo assets/images_limabarreto/81.tiff.txt\n",
+      "Unindo assets/images_limabarreto/82.tiff.txt\n",
+      "Unindo assets/images_limabarreto/83.tiff.txt\n",
+      "Unindo assets/images_limabarreto/84.tiff.txt\n",
+      "Unindo assets/images_limabarreto/85.tiff.txt\n",
+      "Unindo assets/images_limabarreto/86.tiff.txt\n",
+      "Unindo assets/images_limabarreto/87.tiff.txt\n",
+      "Unindo assets/images_limabarreto/88.tiff.txt\n",
+      "Unindo assets/images_limabarreto/89.tiff.txt\n",
+      "Unindo assets/images_limabarreto/90.tiff.txt\n",
+      "Unindo assets/images_limabarreto/91.tiff.txt\n",
+      "Unindo assets/images_limabarreto/92.tiff.txt\n",
+      "Unindo assets/images_limabarreto/93.tiff.txt\n",
+      "Unindo assets/images_limabarreto/94.tiff.txt\n",
+      "Unindo assets/images_limabarreto/95.tiff.txt\n",
+      "Unindo assets/images_limabarreto/96.tiff.txt\n",
+      "Unindo assets/images_limabarreto/97.tiff.txt\n",
+      "Unindo assets/images_limabarreto/98.tiff.txt\n",
+      "Unindo assets/images_limabarreto/99.tiff.txt\n",
+      "Unindo assets/images_limabarreto/100.tiff.txt\n",
+      "Unindo assets/images_limabarreto/101.tiff.txt\n",
+      "Unindo assets/images_limabarreto/102.tiff.txt\n",
+      "Unindo assets/images_limabarreto/103.tiff.txt\n",
+      "Arquivos unidos com sucesso em assets/quaresma.txt\n"
+     ]
+    }
+   ],
    "source": [
     "merge_txt_files(img_path, \"assets/quaresma.txt\")"
    ]
