atualizações gerais para aula 1

--- a/aulas/1.qmd
+++ b/aulas/1.qmd
@@ -64,7 +64,7 @@ Vamos sair daqui todos programadores e hackers?
 ## 2. Cronograma e Ementa da Disciplina {.center}
 
 - Disponível em: [https://ericbrasil.com.br/hd-ufrrj/ementa](https://ericbrasil.com.br/hd-ufrrj/ementa)
-- Discussão sobre o cronograma
+- Discussão sobre o cronograma: [https://ericbrasil.com.br/hd-ufrrj/cronograma](https://ericbrasil.com.br/hd-ufrrj/cronograma)
 
 ---
 
