versão final aula 4

--- a/aulas/4.md
+++ b/aulas/4.md
@@ -24,7 +24,7 @@ format:
 - [Git](https://git-scm.com/)  
 - [GitHub](https://github.com/)  
 - [Zenodo](https://zenodo.org/)  
-- [OSF (Open Science Framework)](https://osf.io/)  
+- [OSF](https://osf.io/)  
 - [Gephi](https://gephi.org/)  
 - [QGIS](https://qgis.org/)  
 - [Voyant Tools](https://voyant-tools.org/)  
@@ -55,7 +55,7 @@ format:
 
 ## 2. Controle de versão e ciência aberta {.center}
 
-### 🔑 Princípios FAIR
+### [ Princípios FAIR ](https://www.go-fair.org/fair-principles/)
 
 - **F**indable → Dados localizáveis  
 - **A**ccessible → Dados acessíveis  
@@ -87,6 +87,22 @@ format:
 
 - **Leitura recomendada**  
   Eric Brasil, *“Git como ferramenta metodológica em projetos de História (parte 1)”*, **Programming Historian em português**, 3 (2023). [https://doi.org/10.46430/phpt0045](https://doi.org/10.46430/phpt0045)
+
+---
+
+## 2.1 Git {.center}
+
+Comandos básicos:
+
+```bash
+git init          # Inicia um repositório Git
+git add <arquivo>  # Adiciona arquivo(s) para o próximo commit
+git commit       # Salva mudanças no repositório
+git push         # Envia mudanças para o repositório remoto
+git pull         # Atualiza o repositório local com mudanças remotas
+git status       # Verifica o estado dos arquivos
+git log          # Mostra o histórico de commits
+```
 
 ---
 
@@ -136,7 +152,16 @@ format:
 
 ---
 
-## 2.4 [OSF (Open Science Framework)](https://osf.io/static/img/osf-logo.png) {.center}
+## 2.3 Zenodo - exemplo {.center}
+
+- Exemplo de repositório no Zenodo:  
+  [pyHDB](https://zenodo.org/records/8180808)  
+
+[![](https://zenodo.org/badge/DOI/10.5281/zenodo.8180808.svg)](https://doi.org/10.5281/zenodo.8180808)
+
+---
+
+## 2.4 [OSF (Open Science Framework)](https://osf.io/) {.center}
 
 ![](https://storage.googleapis.com/cos-osf-prod-cdn-us/assets/cos-shield.png)
 
@@ -185,6 +210,49 @@ format:
 
 ---
 
+### 3.1 Gephi - instalação {.center}
+
+- Baixar em: [https://gephi.org/users/download/](https://gephi.org/users/download/)
+- Siga as instruções para seu sistema operacional (Windows, macOS, Linux): [https://gephi.org/users/install/](https://gephi.org/users/install/)
+
+---
+
+### 3.1 Gephi - referência {.center}
+
+- [ Martin Grandjean, GEPHI – Introduction to Network Analysis and Visualization](https://www.martingrandjean.ch/gephi-introduction/)
+
+---
+
+## 3.1.1 Lógica de Nodes e Edges {.center}
+
+- **Nodes (nós)**  
+  - Representam **entidades** (pessoas, lugares, documentos, conceitos).  
+  - São os pontos ou círculos do grafo.  
+
+- **Edges (arestas)**  
+  - Representam as **relações** entre os nós.  
+  - Podem ser **direcionadas** (A → B) ou **não direcionadas** (A — B).  
+  - Podem ter **peso** (intensidade da relação).  
+
+---
+
+## 3.1.1 Lógica de Nodes e Edges {.center}
+
+💡 Em Gephi, redes = **Nodes + Edges** → possibilitam visualizar **estruturas e padrões**.  
+
+---
+
+## 3.1.2 Exemplo: redes de correspondência {.center}
+
+- Cada **intelectual** é um **node** (nó).  
+- Cada **carta enviada** é uma **edge** (aresta) conectando dois nós.  
+- É possível analisar:  
+  - **Quem escreve mais cartas** (grau de centralidade).  
+  - **Quem conecta diferentes grupos** (nós de ponte).  
+  - A formação de **comunidades epistolares**.  
+
+---
+
 ## 3.2 QGIS {.center}
 
 ![](https://qgis.org/styleguide/visual/qgis-logo.png)
@@ -203,6 +271,12 @@ format:
   - Integrar dados espaciais de diferentes formatos (Shapefile, GeoJSON, KML, etc.).  
   - Realizar análises espaciais complexas (densidade, fluxos, camadas históricas).  
   - Código aberto, gratuito e com ampla comunidade de suporte.  
+
+---
+
+### 3.2 QGIS - instalação {.center}
+
+- Baixar em: [https://qgis.org/download/](https://qgis.org/download/)
 
 ---
 
@@ -294,6 +368,12 @@ format:
   - Transformar e padronizar dados rapidamente.  
   - Trabalhar com **formatos variados** (CSV, TSV, JSON, XML).  
   - Recurso de **clustering** para identificar variações e duplicatas.  
+
+---
+
+### 4.3 OpenRefine - instalação {.center}
+
+- Siga as instruções: [https://openrefine.org/docs/manual/installing](https://openrefine.org/docs/manual/installing)
 
 ---
 
