atualização da aula 8, qrcode

--- a/aulas/8.md
+++ b/aulas/8.md
@@ -18,6 +18,14 @@ format:
     footer: "IM-1256 – Introdução à História Digital | [ericbrasil.com.br/hd-ufrrj](https://ericbrasil.com.br/hd-ufrrj)"
 ---
 
+## Acesse os slides da aula {.center}
+
+::::{.center-image} 
+![](imgs/qrc8.png) 
+::::
+
+---
+
 ## Estrutura da oficina {.center}
 
 **Parte 1 – OCR (Reconhecimento Óptico de Caracteres)**  
@@ -62,14 +70,6 @@ Compreender e aplicar técnicas básicas de **Reconhecimento Óptico de Caracter
 - [Instalando Python no Windows 11](https://youtu.be/QPmIsKgdifI?si=UytlrpkuV49BmDZh)
 - [Instalando o VS Code no Windows 11](https://youtu.be/VyY1xDSl6wU?si=_k3Gty6RJYl3Vzm3)
 - [Corpus Analysis with spaCy - Programming Historian](https://programminghistorian.org/en/lessons/corpus-analysis-with-spacy)
-
----
-
-## QR Code {.center}
-
-Acesse os materiais completos da oficina:  
-
-![]()
 
 ---
 
@@ -207,3 +207,203 @@ Saída → cria `resultado.txt` com o texto extraído.
 Quanto melhor a imagem, **melhor o OCR**.
 
 ---
+
+# Parte 2: Processamento de Linguagem Natural {.center}
+
+---
+
+## O que é NLP? {.center}
+
+> **NLP (Natural Language Processing)** é o campo da ciência computacional que busca ensinar máquinas a **ler, compreender e gerar linguagem humana**.
+
+---
+
+## Aplicações comuns {.center}
+
+- Tradução automática (Google Translate)  
+- Análise de sentimentos  
+- Assistentes de voz (Alexa, Siri, ChatGPT)  
+- **Extração de informação histórica de textos digitalizados**
+
+---
+
+## NLP nas Humanidades Digitais {.center}
+
+**Por que o NLP importa para historiadores?**
+
+- Permite analisar **grandes volumes de texto** (jornais, cartas, relatórios).  
+- Facilita **descobrir padrões discursivos** e mudanças semânticas ao longo do tempo.  
+- Amplia a compreensão sobre **memória, discurso e poder** em arquivos digitais.
+
+📚 Termo-chave: **“Leitura Distante”** (Franco Moretti)
+
+---
+
+## Fluxo de trabalho {.center}
+
+1️⃣ OCR: converte imagens em texto  
+2️⃣ **Pré-processamento textual** (limpeza, tokenização)  
+3️⃣ **Análise linguística** (POS tagging, NER, dependências sintáticas)  
+4️⃣ Interpretação e visualização de resultados  
+
+📊 Exemplo de pipeline:
+```
+
+Imagem (PDF) → Texto OCR → spaCy → Análise → Gráficos
+
+````
+
+---
+
+## spaCy {.center}
+
+Biblioteca em Python projetada para **análise linguística robusta e rápida**.
+
+- Tokenização, lematização, POS tagging  
+- Reconhecimento de entidades nomeadas (NER)  
+- Análise sintática de dependências  
+- Suporte a múltiplos idiomas (incluindo português 🇧🇷)
+
+---
+
+## Instalação {.center}
+
+```bash
+python3 -m venv venv
+source venv/bin/activate
+pip install spacy
+python -m spacy download pt_core_news_lg
+````
+
+Verifique se o modelo foi instalado corretamente:
+
+```bash
+python -m spacy validate
+```
+
+---
+
+## Exemplo básico {.center}
+
+```python
+import spacy
+nlp = spacy.load("pt_core_news_lg")
+
+texto = "Em 15 de novembro de 1889, Deodoro da Fonseca proclamou a República do Brasil no Rio de Janeiro."
+doc = nlp(texto)
+
+for token in doc:
+    print(token.text, token.pos_, token.dep_)
+```
+
+---
+
+## Exemplo básico {.center}
+
+📄 Saída esperada:
+
+```
+Em - ADP - case
+15 - NUM - nummod
+novembro - NOUN - obl
+...
+```
+
+---
+
+## Reconhecimento de Entidades Nomeadas (NER) {.center}
+
+🎯 O NER permite extrair **nomes de pessoas, lugares, datas, instituições** etc.
+
+```python
+for ent in doc.ents:
+    print(ent.text, ent.label_)
+```
+
+---
+
+## Reconhecimento de Entidades Nomeadas (NER) {.center}
+
+📋 Saída:
+
+```
+15 de novembro de 1889  DATA
+Deodoro da Fonseca       PESSOA
+República do Brasil      LOCAL
+Rio de Janeiro           LOCAL
+```
+
+---
+
+## Visualização com displaCy {.center}
+
+O spaCy possui um visualizador embutido para NER:
+
+```python
+from spacy import displacy
+displacy.render(doc, style="ent", jupyter=True)
+```
+
+---
+
+## Limpeza e preparação de dados {.center}
+
+🧹 Antes da análise, é essencial:
+
+* Remover caracteres especiais, HTML e stopwords
+* Normalizar acentuação e capitalização
+* Dividir o texto em parágrafos ou sentenças coerentes
+
+---
+
+## Exemplo aplicado {.center}
+
+Usando um corpus da **Hemeroteca Digital Brasileira** (OCR):
+
+```python
+with open("artigo1890.txt") as f:
+    texto = f.read()
+
+doc = nlp(texto)
+entidades = [(ent.text, ent.label_) for ent in doc.ents]
+print(entidades[:10])
+```
+
+---
+
+## Exemplo aplicado {.center}
+
+Permite mapear:
+
+* Pessoas mencionadas
+* Cidades e regiões
+* Datas e eventos históricos
+
+---
+
+## Desafios para o português {.center}
+
+⚠️ NLP em português enfrenta dificuldades específicas:
+
+* Ortografia antiga e variações regionais
+* Palavras compostas e nomes próprios históricos
+* Escassez de modelos treinados com corpora históricos
+
+---
+
+## Soluções? {.center}
+
+* Treinar modelos com *datasets* históricos
+* Combinar NLP + métodos qualitativos (leitura próxima)
+
+---
+
+## Discussão {.center}
+
+> Como o NLP pode transformar a forma como lemos o passado?
+
+* Que riscos há em “automatizar” a leitura?
+* O que se perde (ou ganha) ao delegar parte da análise textual a modelos?
+* Como equilibrar escalabilidade e interpretação crítica?
+* Com o advento das IAs generativas (ex: ChatGPT), qual o futuro do NLP nas Humanidades Digitais?
+
